<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="rest">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="149dp"
        android:layout_height="74dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="42dp"
        android:text="@string/nameDeclare"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="157dp"
        android:layout_height="68dp"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="43dp"
        android:text="@string/usernameDeclare"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="170dp"
        android:layout_height="69dp"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="194dp"
        android:text="@string/phoneNumber"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="106dp"
        android:onClick="startOver"
        android:text="Start Over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>